# MiniGuard

./: .gitignore
driver/: MiniGuard v2.c  MiniGuard.bk  MiniGuard.c  MiniGuard.inf  MiniGuard.rc  MiniGuard.sln  MiniGuard.vcxproj  MiniGuard.vcxproj.filters  MiniGuardSave.c  save.c  save2.c  utils.c  utils.h
driver/testC/: main.c  options.txt  replace.c
user/: Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
user/src/: types.ts
user/src-tauri/: Cargo.toml  sq.db  tauri.conf.json
user/src-tauri/src/: info.rs  listen.rs  main.rs  main3.rs  sql.rs  undo.rs  utils.rs
user/src/components/: ProgramPicker.svelte  SvgIcon.svelte
user/src/routes/: +layout.svelte  +page.svelte
user/src/routes/dashboard/: +page.svelte
