[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="main3"
path = "src/main3.rs"
[[bin]]
name="main"
path = "src/main.rs"
[[bin]]
name="drives"
path = "src/drives.rs"

[dependencies.windows]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage",
  "Win32_Storage_InstallableFileSystems",
  "Win32_Storage_FileSystem",
  "Win32_System_IO"
]

[[bin]]
name="info"
path="/src/info.rs"

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
uuid = { version = "1.6.1", features = ["v4"] }
